# B

./: .cursorignore  .cursorrules  .gitignore  01_basic_arithmetic.out  01_basic_arithmetic.s  81_ssa_struct_return_chain.out  81_ssa_struct_return_chain.s  CMakeLists.txt  README.md  project_structure.md  test.b  test.out  test.s  test_ma.s  todo.md
.claude/: settings.json
.github/instructions/: common.instructions.md  dev.instructions.md
.github/workflows/: ci.yml
B/v3_10/: build_and_test.sh
B/v3_11/: build_and_test.sh  rebuild_run.sh  run.sh
B/v3_12/: build_and_test.sh  config.ini
B/v3_14/: config.ini
B/v3_15/: simple_test.b  stack_test.b  test_error.b  test_line_macro.b  test_normal.b  test_parse_error.b  test_vec.b
B/v3_16/: syntax.md
B/v3_17/: run.sh
B/v3_18/: config.ini
bpp/: README.md  build_selfhost.sh  build_selfhost_v2.sh  convert_enum_to_const.py  convert_v2_to_v3.py  run_v3_tests.sh  test_hello.bpp  verify_selfhost.sh
docs/: basm-syntax.md  library_policy.md  phase2_ptr_conversion_plan.md  todo.md  v1_roadmap.md  v2_roadmap.md  v2_todo.md  v2c_bugs.md  v3.5_plan.md  v3_19_todo.md  v3_20_todo.md  v3_9_todo.md  v3_roadmap.md  v3_simplification.md  v3_syntax.md  v3_todo.md  v4_roadmap.md  v4_todo.md  windows_support.md
examples/: tmp_call_codegen_program.b  tmp_call_dump_ir.b  tmp_import_codegen.b  tmp_import_p4_all.b  tmp_import_p4_all_call.b  tmp_import_typecheck.b  tmp_p4_combo1.b  tmp_p4_combo2.b  tmp_p4_combo3.b  tmp_p4_imports_alias_hoist.b  tmp_p4_read_input_only.b  tmp_p4_repro.b  tmp_p4_repro2.b  tmp_p4_repro2b.b  tmp_p4_repro2c.b  tmp_p4_repro3.b  tmp_p4_repro3b.b  tmp_p4_repro3c.b  tmp_p4_repro_call.b  tmp_p4_repro_cstr.b  tmp_p4_seg_isolate.b  tmp_p4_seg_isolate2.b  tmp_p4_seg_isolate3.b  tmp_print_codegen_import.b  tmp_repro_codegen_only_after.b  tmp_repro_full_pipeline.b  tmp_repro_full_pipeline_noprints.b  tmp_repro_full_pipeline_nosys.b  tmp_repro_import_codegen.b  tmp_repro_import_lexer.b  tmp_repro_import_parser.b  tmp_repro_import_token.b  tmp_repro_import_typecheck.b  tmp_repro_main_args_only.b  tmp_repro_noprints_sys.b  tmp_repro_smoke_step1.b  tmp_repro_smoke_step10.b  tmp_repro_smoke_step11.b  tmp_repro_smoke_step12.b  tmp_repro_smoke_step13.b  (+41 more)
src/: v3_6_combined.b
test/: test_all_features.b  test_arr_only.b  test_arr_single.b  test_comparison.b  test_compiler_essentials.b  test_compiler_features.b  test_complex_memory.b  test_compound_simple.b  test_comprehensive.b  test_core_features.b  test_for.b  test_for_minimal.b  test_forward.b  test_gen_struct.b  test_gen_use.b  test_generic_parse.b  test_generic_simple.b  test_helper.b  test_no_import.b  test_normal_struct.b  test_parser_import.b  test_print.b  test_ptr_four.b  test_ptr_minimal.b  test_simple.b  test_simple_memory.b  test_while.b  test_with_import.b
v3_19/: build_and_test.sh  config.ini  param_test.out  param_test.s  stdin.s
v3_20/: build_and_test.sh  config.ini
(+936 files in other folders)
